Change project structure First tests added to try with Travis CI New